# dynamic-links-between-gold-newmont-and-gdx-using-var-irf-and-fevd-in-python

./: Cointegration_Analysis_Gold_Complete.ipynb  Cointegration_Analysis_Gold_Complete.py  Gold pricing.ipynb  Gold pricing.py  README.md  Regression and cointegration with gold and oil.ipynb  Regression and cointegration with gold and oil.py  article.md  benchmark_rust.py  cointegration of gold.ipynb  cointegration of gold.py  cointegration with gold and newmont.py  config.yaml  gold_nem_gdx_var_analysis.py  main.py  pyproject.toml  requirements.txt
12_Multivariate-Time-Series-VAR/: generate_images.py
12_Multivariate-Time-Series-VAR/code/: 12_Multivariate-Time-Series-VAR.py
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py  core.py
