[project]
name = "dynamic-links-between-gold-newmont-and-gdx-using-v"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "dynamic_links_between_gold_newmont_and_gdx_using_var_irf_and_fevd_in_python_rs"

